# aoc2025

./: Cargo.toml
days/day-one/: Cargo.toml
days/day-one/src/: dial.rs  instructions.rs  lib.rs
days/day-two/: Cargo.toml
days/day-two/src/: instructions.rs  lib.rs
days/utils/: Cargo.toml
days/utils/src/: lib.rs
src/: main.rs
