[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["days/*"]

[dependencies]
utils = {path = "days/utils" }
day-one = { path = "days/day-one" }
day-two = { path = "days/day-two" }

anyhow = { workspace = true }
fs-err = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }


[workspace.dependencies]
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.9"
anyhow = "1"
fs-err = "3"
clap = { version = "4", features = ["derive"] }

